--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   node:
-    image: node:18
+    build: .docker/node
     volumes:
       - .:/home/app:cached
       - node_modules:/home/app/node_modules
